Development
	Move playlist from window to panel (still needs cleanup)
	Handle the resize code differently so that kvbc.com works
0.5.1
	Hide total time display on streaming media when total time is greater than 24 hours
	Implement Copy URL function on right click menu when running in plugin mode
	On error "Error while decoding frame" rewind 10 seconds to find key frame again
	Allow CTRL-F to take the display out of fullscreen mode
	When Paused and the progress bar is clicked, set state back to playing
	Make FF/REW go insensitve on pause
	Reset progess bar on stop
	Fix bug in OpenButton, pointer data was getting over written
	Fix to allow --random to be set correctly on commandline
	Fix problem with crashing when switching between random and non-random order
	Fix problem with parse_basic where buffer is blank and so the path was valid, but filename was not
		and so the file was thought to be a playlist and garbage was loaded on the list
	Rework Edit->Preferences dialog
	Allow input of a URL into the Open dialog
	Don't resize the video window automatically after first video played
	Quiet the output from the app when -v option not specified
	Updated RAM parser
	Allow enabling and disabling of plugin emulation via the Edit->Preferences (Plugin) tab
	Reenable play button when autopaused and stop, prev or next is clicked
	Only disable screen saver when we play a video
	Implement GetPlayState dbus method
	DVD and DVD with menu support improved playlist support
	Redo the randomization backend
	Add loop control as a menu option Edit->Loop Playlist
	Use private dbus connection
0.5.0
	If filename is not specified on playlist save then assume .pls
	Redo the path to items on playlist code
	Fix up playlist loading so it can handle items where the playlist is specified as a fully qualified filename
		and items in the playlist are not
	Implement drag and drop of multiple files to the main window, play if only one
	Implement drag and drop of multiple files to the playlist